[build-system]
requires = ["setuptools<74", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "rdpyqt"
version = "2.1.3"
description = "Remote Desktop Protocol client"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "Sylvain Peyrefitte", email = "citronneur@gmail.com" },
]
maintainers = [
    { name = "Hajime Nakagami", email = "nakagami@gmail.com" },
]
dependencies = [
    "twisted",
    "pyopenssl",
    "service_identity",
    "rsa",
    "pyasn1",
    "pycryptodome",
    "Pillow",
    "PyQt6",
    "qt-reactor",
    "numpy",
]

[project.urls]
homepage = "https://github.com/nakagami/rdpyqt"

[project.optional-dependencies]
h264 = ["av"]

[project.scripts]
rdpyqt6     = "rdpy.scripts.rdpyqt6:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdpy*"]
